k8s/tripviewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    deploy: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
        - image: "registrylpg2295.azurecr.io/tripinsights/tripviewer:1.0"
          imagePullPolicy: Always
          name: tripviewer
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: ClusterIP
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
